frontend/app/styles/components/collections/_tabs.scss
@import "../../mixins";

.collection-tabs {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 30px;
  margin-top: 30px;
  width: 100%;
}

.collection-tabs__tabs {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: flex-start;
  overflow-x: auto;
}

.collection-tabs__refresh-button {
  @include reset-button-styles;
  display: flex;
  justify-content: center;
  align-items: center;
}

.collection-tabs__tabs,
.collection-tabs__refresh-button {
  padding-bottom: 10px;
}

.collection-tabs__tab {
  margin-right: 35px;
  button {
    font-size: var(--fontsize-heading);
    font-weight: 700;
    @include reset-button-styles;
  }
}

.collection-tabs__tab--active {
  button {
    border-bottom: 3px solid var(--colour-highlight);
  }
}

